--- a/apps/demo/project.json
+++ b/apps/demo/project.json
@@ -13,7 +13,7 @@
         "outputPath": "dist/apps/demo",
         "index": "apps/demo/src/index.html",
         "browser": "apps/demo/src/main.ts",
-        "polyfills": ["zone.js"],
+        "polyfills": [],
         "tsConfig": "apps/demo/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": [
@@ -23,6 +23,9 @@
           }
         ],
         "styles": ["apps/demo/src/styles.scss"],
+        "stylePreprocessorOptions": {
+          "includePaths": ["node_modules/"]
+        },
         "scripts": [],
         "server": "apps/demo/src/main.server.ts",
         "prerender": true,
